# tempo-coordinator-k8s-operator

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  charmcraft.yaml  cos-lite_r11.bundle  dev-release  pyproject.toml  requirements.txt  spread.yaml  tox.ini
.github/: .jira_sync_config.yaml
.github/workflows/: pull-request.yaml  tiobe-scan.yaml
lib/charms/prometheus_k8s/v0/: prometheus_scrape.py
lib/charms/tempo_coordinator_k8s/v0/: charm_tracing.py  tempo_api.py  tracing.py
lib/charms/tempo_k8s/:  README.md
lib/charms/tempo_k8s/v2/: tracing.py
lib/charms/tls_certificates_interface/v3/: tls_certificates.py
lib/charms/tls_certificates_interface/v4/: tls_certificates.py
scripts/: deploy_minio.py  tracegen.py
src/: charm.py  nginx_config.py  tempo.py  tempo_config.py
src/grafana_dashboards/: tempo-operational.json  tempo-reads.json  tempo-tenants.json  tempo-writes.json  tempo.json
src/loki_alert_rules/: .gitkeep  error_level_logs_found.rule  log_volume.yaml
src/prometheus_alert_rules/nginx/: knyar-nginx-exporter.yml
src/prometheus_alert_rules/workers/: alerts.yaml
terraform/: README.md  main.tf  outputs.tf  variables.tf
tests/catan/: test_clustering.py
tests/integration/: conftest.py  helpers.py  juju.py  test_distributed.py  test_integration.py  test_juju.py  test_scaling_monolithic.py  test_self_monitoring.py  test_self_tracing.py  test_tempo_api.py  test_tls.py
tests/integration/tempo-api-tester/: actions.yaml  charmcraft.yaml  requirements.txt
tests/integration/tempo-api-tester/src/: charm.py
tests/integration/tester/: charmcraft.yaml
tests/integration/tester/src/: charm.py
tests/interface/: conftest.py  test_grafana_datasource_exchange.py  test_tempo_cluster.py  test_tracing.py
tests/scenario/: conftest.py  test_charm_statuses.py  test_charm_tracing.py  test_config.py  test_datasources.py  test_ingressed_tracing.py  test_nginx.py  test_probes.py  test_tempo_api_implementation.py  test_tempo_api_lib.py  test_tempo_clustered.py  test_tls.py  test_tracing_legacy.py  test_tracing_provider.py
tests/spread/: generate_spread_tasks.py
tests/unit/: conftest.py  test_charm_tracing.py  test_coherence.py  test_config.py  test_enabled_receivers.py  test_ingressed_tracing.py  test_nginx.py  test_tempo.py  test_tempo_clustered.py  test_tls.py  test_tracing_legacy.py  test_tracing_provider.py  test_tracing_requirer.py
tests/unit/charm/: test_charm_tracing.py  test_ingressed_tracing.py  test_tempo_clustered.py  test_tracing_provider.py
tests/unit/pure/: test_tempo.py
