# Copyright 2022 Canonical Ltd.
# See LICENSE file for licensing details.
[project]
name = "tempo-k8s"
version = "0.1"  # this is in fact irrelevant

dependencies = [
    "importlib-metadata~=6.0.0",
    "ops>=2.17",
    "crossplane",
    "jsonschema==4.17.0",
    "lightkube>=0.15.4",
    "lightkube-models>=1.24.1.4",
    "tenacity==8.2.3",
    "crossplane",
    # PYDEPS
    # lib/charms/tempo_coordinator_k8s/v1/charm_tracing.py
    "opentelemetry-exporter-otlp-proto-http==1.21.0",
    # lib/charms/tls_certificates_interface/v2/tls_certificates.py
    "jsonschema",
    "cryptography",
    # lib/charms/tempo_coordinator_k8s/v1/tracing.py
    "pydantic>=2",
    # lib/charms/prometheus_k8s/v0/prometheus_scrape.py
    "cosl>=0.0.42",
]

[project.optional-dependencies]
dev = [
    "coverage[toml]",
    "pydantic",
    "pytest",
    "ruff",
    "catan",
    "ops[testing]>=2.17",
    # we can unpin this once https://github.com/canonical/pytest-interface-tester/pull/28 merges
    "pytest-interface-tester@git+http://github.com/canonical/pytest-interface-tester@multiple-endpoint-support",
    "minio",
    # opentelemetry-exporter-jaeger complains about old generated protos in integration tests
    "protobuf==3.20.*"
]


[tool.pyright]
include = [
    "src",
    "lib/charms/tempo_coordinator_k8s/"
  ]
extraPaths = ["lib"]
pythonVersion = "3.8"
pythonPlatform = "All"

[build]
build-base = "/tmp/build"

[egg_info]
egg-base = "/tmp"

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
markers = ["setup", "teardown"]

# Formatting tools configuration
[tool.isort]
profile = "black"

[tool.black]
line-length = 99
target-version = ["py38"]

# Linting tools configuration
[lint]
line-length = 99
select = ["E", "W", "F", "C", "N", "D", "I001"]
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
ignore = ["E501", "D107"]
extend-exclude = ["__pycache__", "*.egg_info", "*integration/tester*"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D101", "D102", "D103", "D104"]
# Remove charm_tracing.py E402 when _remove_stale_otel_sdk_packages() is removed
# from the library
"lib/charms/tempo_coordinator_k8s/v0/charm_tracing.py" = ["E402"]

[lint.mccabe]
max-complexity = 10

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.vscode,.coverage"
